--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^0.19.0",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
+    "express-graphql": "^0.8.0",
+    "graphql": "^14.3.1",
     "mongoose": "^5.5.11"
   }
 }
