--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-graphql": "^0.8.0",
     "graphql": "^14.3.1",
     "lodash": "^4.17.11",
-    "mongoose": "^5.5.11"
+    "mongoose": "^5.5.11",
+    "mysql": "^2.17.1"
   }
 }
