--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "json-server": "^0.15.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.5.11",
+    "morgan": "^1.9.1",
     "mysql": "^2.17.1"
   }
 }
